# nocturne-term

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js  vitest.tauri.config.js
.github/workflows/: release.yml
crates/nocturne-resource-monitor-agent/: Cargo.toml
crates/nocturne-resource-monitor-agent/src/: lib.rs
docs/: application-config-storage.md  command-palette.md  connection-hosts.md  dialog-windows.md  dock-layout.md  file-transfers.md  files-tooltab.md  host-icons.md  port-forwarding.md  release-workflow.md  resource-monitor.md  settings-page.md  terminal-daemon.md  terminal-find.md  terminal-split-panes.md  workspace-tabs.md
patches/: @xterm__addon-webgl@0.18.0.patch  @xterm__addon-webgl@0.19.0.patch
scripts/: build-resource-monitor-agents.mjs  build-terminal-agents.mjs  playwright-dock-smoke.mjs  prepare-ripgrep-helpers.mjs  tauri.mjs  validate-helper-resources.mjs
src/: app.d.ts  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_shell.rs  config.rs  error.rs  files.rs  lib.rs  logging.rs  main.rs  port_forwarding.rs  resources.rs  ssh_trust.rs  terminal.rs  terminal_schemes.rs  transfers.rs  types.rs  workspace.rs  workspace_ssh.rs
src-tauri/tests/: local_resource_provider.rs  remote_resource_system_commands.rs  resource_helper_deployment.rs  resource_monitor_agent_protocol.rs  resource_settings.rs  resource_target_detection.rs
src/lib/: bindings.ts
src/routes/: +layout.svelte  +page.svelte
tests/: dock-group-collapse-state.test.ts  dock-group-resize-handle-css.test.ts  dock-group-resize-ratios.test.ts  dock-layout-close-empty-split-group.test.ts  dock-layout-collapse-nested-splits.test.ts  dock-layout-floating-owner-close-placeholder.test.ts  dock-toolbar-placement-source.test.ts  files-columns-ancestor-preload-source.test.ts  files-columns-animation-source.test.ts  files-columns-view-model.test.ts  files-context-menu-actions.test.ts  files-markdown-preview-rendering.test.ts  files-marquee-selection-surface.test.ts  files-multi-selection-state.test.ts  files-pending-address-avoids-stale-local-path-source.test.ts  files-preview-layout-css.test.ts  files-preview-no-horizontal-scroll.test.ts  files-preview-unsupported-hidden.test.ts  files-ripgrep-helper-deployment.rs  files-ripgrep-helper-packaging.test.ts  files-ripgrep-search-ui-source.test.ts  files-ripgrep-search.rs  files-toolbar-actions-settings.test.ts  files-tooltab-finder-ui-source.test.ts  files-tooltab-remounts-by-tool-id-source.test.ts  files-tree-long-name-alignment-source.test.ts  files-tree-sticky-layout.test.ts  files-tree-sticky-settings-schema.test.ts  files-tree-view-expansion.test.ts  files-upload-target-resolution.test.ts  files-workspace-verification-retry.test.ts  files-workspace-verification-source.test.ts  integrated-titlebar-config-source.test.ts  integrated-titlebar-drag-region-source.test.ts  integrated-titlebar-menu-layout-source.test.ts  integrated-titlebar-native-popup-menu-source.test.ts  integrated-titlebar-window-scope-source.test.ts  port-forwarding-inline-editing.test.ts  port-forwarding-runtime-source.test.ts  port-forwarding-table-model.test.ts  (+43 more)
tests/tauri/: files-columns-directory-double-click-keeps-window.test.mjs  files-columns-file-preview-third-column.test.mjs  files-columns-left-column-directory-focus.test.mjs  files-columns-nested-navigation-motion.test.mjs  files-columns-view-shows-content.test.mjs  files-context-menu-multi-selection.test.mjs  files-finder-toolbar-upload-drop-affordances.test.mjs  files-image-preview-renders.test.mjs  files-refresh-preserves-tree-state.test.mjs  files-toolbar-actions-do-not-overflow-narrow-tooltab.test.mjs  files-tree-directory-row-click-expansion.test.mjs  files-tree-long-name-column-alignment.test.mjs  files-upload-completion-refreshes-visible-tree.test.mjs  floating-window-open-keeps-main-responsive.test.mjs  integrated-titlebar-decorum-layout.test.mjs  isolated-app-config.mjs  parallel-port-env.mjs  port-forwarding-workspace-lifecycle.test.mjs  resource-monitor-ssh-provider-mode-persists.test.mjs  resource-monitor-ui-layout.test.mjs  shared-vite-server-global-setup.mjs  shared-vite-server.mjs  tauri-test-application.mjs  terminal-agent-instant-exit-no-pipe-error.test.mjs  terminal-agent-live-shell-stays-connected.test.mjs  terminal-font-stack-loads.test.mjs  terminal-main-window-ignores-foreign-pane-events.test.mjs  terminal-main-window-ignores-foreign-session-events.test.mjs  terminal-padding-settings-apply-to-workspace.test.mjs  terminal-sessions-delete-stale-registry.test.mjs  terminal-sessions-history-tooltab.test.mjs  terminal-sessions-narrow-scrollbar.test.mjs  terminal-startup-light-theme-background.test.mjs  terminal-tooltab-live-title.test.mjs  terminal-workspace-close-single-session.test.mjs  (+18 more)
(+130 files in other folders)
