[package]
name = "nocturne"
version = "0.1.0"
description = "A Tauri App"
authors = ["mslxl"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nocturne_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
base64 = "0.22"
notify = "8.0.2"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
toml_edit = "0.19"
specta = "=2.0.0-rc.25"
tauri-specta = { version = "=2.0.0-rc.25", features = ["typescript"] }
specta-typescript = "0.0.12"
tauri-plugin-clipboard-manager = "2"
ssh2 = "0.9.5"
keyring = "4.0.1"
tauri-plugin-notification = "2.3.3"
uuid = { version = "1.23.2", features = ["v4", "serde"] }
dirs = "6.0.0"
glob = "0.3.3"
keyring-core = "1.0.0"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
panic = "abort"
strip = true
