[package]
name = "nocturne"
version = "0.1.0"
description = "A Tauri App"
authors = ["mslxl"]
edition = "2021"
default-run = "nocturne"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nocturne_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
base64 = "0.22"
chacha20poly1305 = "0.10"
notify = "8.0.2"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
reqwest = { version = "0.13.3", features = ["blocking"] }
sysinfo = "0.37"
hex = "0.4"
flate2 = "1"
tar = "0.4"
toml = "0.8"
toml_edit = "0.19"
specta = "=2.0.0-rc.25"
tauri-specta = { version = "=2.0.0-rc.25", features = ["typescript"] }
specta-typescript = "0.0.12"
tauri-plugin-clipboard-manager = "2"
ssh2 = "0.9.5"
keyring = "4.0.1"
tauri-plugin-notification = "2.3.3"
uuid = { version = "1.23.2", features = ["v4", "serde"] }
dirs = "6.0.0"
glob = "0.3.3"
keyring-core = "1.0.0"
tauri-plugin-log = "2.8.0"
log = "0.4"
urlencoding = "2.1"
zeroize = "1.8"
tauri-plugin-decorum = "1.1.1"
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
  "std",
  "NSButton",
  "NSControl",
  "NSView",
  "NSWindow",
] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
  "std",
  "NSGeometry",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dxgi",
] }
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Performance",
] }

[dev-dependencies]
tempfile = "3.27.0"

[[test]]
name = "resource-monitor-local-provider"
path = "../tests/resource-monitor-local-provider.rs"

[[test]]
name = "resource-monitor-build-metadata"
path = "../tests/resource-monitor-build-metadata.rs"

[[test]]
name = "files-ripgrep-search"
path = "../tests/files-ripgrep-search.rs"

[[test]]
name = "files-ripgrep-helper-deployment"
path = "../tests/files-ripgrep-helper-deployment.rs"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
panic = "abort"
strip = true
