[package]
name = "nocturne-resource-monitor-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dxgi",
] }
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Performance",
] }

[dev-dependencies]
tempfile = "3.27.0"

[[test]]
name = "resource-monitor-agent-linux-drm-gpu"
path = "../../tests/resource-monitor-agent-linux-drm-gpu.rs"

[[test]]
name = "resource-monitor-agent-windows-pdh-gpu"
path = "../../tests/resource-monitor-agent-windows-pdh-gpu.rs"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
panic = "abort"
strip = true
